...
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          Text("Your age is ${viewModel.userAge}"),
          const SizedBox(
            height: 10,
          ),
          const Text("Is this the correct age?"),
          Center(
            child: DropdownButton(
                key: const Key('age_dropdown'),
                items: dropDownItems,
                value: viewModel.finalStatement,
                onChanged: (selection) {
...
          ),
          const SizedBox(
            height: 10,
          ),
          viewModel.finalStatement == "The age is correct"
              ? ElevatedButton(
            key: const Key("guess_gender"),
                  // onPressed: () => {router.to(Routes.ageDisplay)},
                  onPressed: () => {router.to(Routes.genderGuesser)},
                  child: const Text("Guess Gender"))
              : const SizedBox(
                  height: 10,
                )
...
